feat: [CDS-54466]: refactoring changes of instance sync v2 ng